# ExenDLR

./: README.md  pyproject.toml
.github/workflows/: publisher.yml
src/exendlr/: __init__.py  __main__.py  reader.py
