[tool.poetry]
name = "exendlr"
version = "1.0"
description = "Module for reading docker logs"
authors = ["Exenifix"]
license = "MIT"
repository = "https://github.com/Exenifix/ExenDLR"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
